--- a/_posts/2020-05-01-ld64.md
+++ b/_posts/2020-05-01-ld64.md
@@ -168,3 +168,6 @@ zld是一个基于ld优化的版本, 主要通过以下几种方式:
 ### 参考
 - Inside the Linker
 - zld
+
+
+![公众号](https://mmbiz.qpic.cn/sz_mmbiz_png/eB0h4dLLiaktdfN6hbNkBlHNicfh9JIDzhklEdfYcbOpKUVYicckYkPN3yU6vQe8yUZj5crLB8aVPuRGR2oc4rn1Q/640?wx_fmt=png&wxfrom=5&wx_lazy=1&wx_co=1)
